--- a/views/subdir/index.html
+++ b/views/subdir/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subdirectory Index</title>
+    <title>Subdirectory</title>
 </head>
 
 <body>
-    <h1>Subdirectory Index</h1>
+    <h1>This is the Subdirectory Index</h1>
 </body>
 
 </html>
