--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@
 body {
     font-size: 36px;
     min-height: 100vh;
-    color: #fff;
+    color: rgb(10, 10, 144);
     background-color: #000;
     display: grid;
     place-content: center;
