--- a/views/index.html
+++ b/views/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
-    <link rel="stylesheet" href="../public/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
     <h1>Nodejs Web Servers ...</h1>
-    <img src="/02Expressjs/img/img1.jpg">
+    <img src="img/img1.jpg">
 </body>
 
 </html>
